--- a/src/content/blog/retrospective_2023/index.mdx
+++ b/src/content/blog/retrospective_2023/index.mdx
@@ -4,12 +4,14 @@ date: 2023-12-31T16:27:41+09:00
 tags: ["振り返り"]
 description: "2023年について、仕事でどういうことをしていたかを振り返る。"
 ---
+import { Image } from "astro:assets";
+import retrospectiveImage from "./2023_retrospective.jpg";
 
 # 仕事
 
 2022年10月に転職をした。もう1年と少し立つのが驚き。
 
-![2022年振り返り](./2023_retrospective.jpg)
+<Image src={retrospectiveImage} alt="2023年振り返り" class="w-3/4 mx-auto rounded-md shadow-lg" />
 
 ## 1月〜
 
