--- a/src/pages/about/index.mdx
+++ b/src/pages/about/index.mdx
@@ -1,32 +1,29 @@
 ---
-layout: ../layouts/BlogLayout.astro
-
+layout: ../../layouts/BlogLayout.astro
 
 title: Kona4
 subtitle: Back-End Engineer
 comments: false
 ---
 
-## About Me
+# こな / kona
 
-name: kona
-
-Webアプリケーションエンジニアをやっています👍
+ソフトウェアエンジニアです👍
 このブログは学習のアウトプットとして使用しています。
 
-I am a Web Application Engineer in Japan👍
+I am a Software Engineer in Japan👍
 I use this blog as an output of my learning.
 
-## 最近の興味 / interested
-
-- Ruby（Rails）
-- TypeScript（React）
-- Golang
-
-## 趣味 / hobby
+## Hobby
 
 - 観劇 / Musical
 - 乃木坂46のライブに行くこと / Going to a live concert ( of Nogizaka46 )
 - 読書 / Books
 - ゲーム / Games
 - ゲーム実況を見ること / Watching video games on YouTube
+
+## Programming Languages
+
+- Ruby（Rails）
+- TypeScript（React）
+- Golang
