AboutページにGitHubリンクを設置

--- a/src/pages/about/index.mdx
+++ b/src/pages/about/index.mdx
@@ -6,7 +6,11 @@ subtitle: Back-End Engineer
 comments: false
 ---
 
+import LinkCard from "../../components/LinkCard.astro";
+
 # こな / kona
+
+<LinkCard url="https://github.com/kngy0306" />
 
 ソフトウェアエンジニアです👍
 このブログは学習のアウトプットとして使用しています。
