OGP画像を記事ごとに設定

--- a/src/content/blog/retrospective_2023/index.mdx
+++ b/src/content/blog/retrospective_2023/index.mdx
@@ -3,7 +3,9 @@ title: "2023年振り返り"
 date: 2023-12-31T16:27:41+09:00
 tags: ["振り返り"]
 description: "2023年について、仕事でどういうことをしていたかを振り返る。"
+ogImage: "./2023_retrospective.jpg"
 ---
+
 import { Image } from "astro:assets";
 import retrospectiveImage from "./2023_retrospective.jpg";
 
